bug fixed in handling of chat members change messages